Remove the hidden asSystemEventData