@@ -3,6 +3,7 @@
 
 package com.azure.messaging.eventgrid;
 
+import com.azure.core.util.BinaryData;
 import com.azure.core.util.serializer.TypeReference;
 import com.azure.messaging.eventgrid.implementation.models.ContosoItemReceivedEventData;
 import com.azure.messaging.eventgrid.implementation.models.ContosoItemSentEventData;
@@ -15,10 +16,10 @@ import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.module.SimpleModule;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.time.OffsetDateTime;
 import java.util.Base64;
 import java.util.List;
@@ -27,6 +28,20 @@ import java.util.Map;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class DeserializationTests {
+    static <T> Object toSystemEventData(EventGridEvent event) {
+        return getSystemEventData(event.getData(), event.getEventType());
+    }
+    static <T> Object toSystemEventData(CloudEvent event) {
+        return getSystemEventData(event.getData(), event.getType());
+    }
+
+    static Object getSystemEventData(BinaryData data, String eventType) {
+        if (SystemEventNames.getSystemEventMappings().containsKey(eventType)) {
+            return data
+                .toObject(TypeReference.createInstance(SystemEventNames.getSystemEventMappings().get(eventType)));
+        }
+        return null;
+    }
 
     // just test to see if these events can be deserialized
     @Test
@@ -93,8 +108,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof StorageBlobDeletedEventData);
-        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof StorageBlobDeletedEventData);
+        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) toSystemEventData(events[0]);
         assertEquals("https://example.blob.core.windows.net/testcontainer/testfile.txt", eventData.getUrl());
     }
 
@@ -108,8 +123,8 @@ public class DeserializationTests {
 
         assertNotNull(events);
         assertEquals(1, events.length);
-        assertTrue(events[0].asSystemEventData() instanceof StorageBlobDeletedEventData);
-        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof StorageBlobDeletedEventData);
+        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) toSystemEventData(events[0]);
         assertEquals("https://example.blob.core.windows.net/testcontainer/testfile.txt", eventData.getUrl());
     }
 
@@ -148,7 +163,7 @@ public class DeserializationTests {
 //
 //        assertNotNull(events);
 //        assertEquals(1, events.length);
-//        assertNull(events[0].asSystemEventData());
+//        assertNull(toSystemEventData(events[0]));
 //        assertEquals("/blobServices/default/containers/testcontainer/blobs/testfile.txt", events[0].getSubject());
     }
 
@@ -316,11 +331,11 @@ public class DeserializationTests {
 
         assertNotNull(events);
         assertEquals(4, events.length);
-        assertTrue(events[0].asSystemEventData() instanceof StorageBlobCreatedEventData);
-        assertTrue(events[1].asSystemEventData() instanceof StorageBlobDeletedEventData);
-        assertTrue(events[2].asSystemEventData() instanceof StorageBlobDeletedEventData);
-        assertTrue(events[3].asSystemEventData() instanceof ServiceBusDeadletterMessagesAvailableWithNoListenersEventData);
-        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) events[2].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof StorageBlobCreatedEventData);
+        assertTrue(toSystemEventData(events[1]) instanceof StorageBlobDeletedEventData);
+        assertTrue(toSystemEventData(events[2]) instanceof StorageBlobDeletedEventData);
+        assertTrue(toSystemEventData(events[3]) instanceof ServiceBusDeadletterMessagesAvailableWithNoListenersEventData);
+        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) toSystemEventData(events[2]);
         assertEquals("https://example.blob.core.windows.net/testcontainer/testfile.txt", eventData.getUrl());
     }
 
@@ -333,8 +348,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof AppConfigurationKeyValueDeletedEventData);
-        AppConfigurationKeyValueDeletedEventData eventData = (AppConfigurationKeyValueDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof AppConfigurationKeyValueDeletedEventData);
+        AppConfigurationKeyValueDeletedEventData eventData = (AppConfigurationKeyValueDeletedEventData) toSystemEventData(events[0]);
         assertEquals("key1", eventData.getKey());
     }
 
@@ -346,8 +361,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof AppConfigurationKeyValueModifiedEventData);
-        AppConfigurationKeyValueModifiedEventData eventData = (AppConfigurationKeyValueModifiedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof AppConfigurationKeyValueModifiedEventData);
+        AppConfigurationKeyValueModifiedEventData eventData = (AppConfigurationKeyValueModifiedEventData) toSystemEventData(events[0]);
         assertEquals("key1", eventData.getKey());
     }
 
@@ -360,8 +375,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ContainerRegistryImagePushedEventData);
-        ContainerRegistryImagePushedEventData eventData = (ContainerRegistryImagePushedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ContainerRegistryImagePushedEventData);
+        ContainerRegistryImagePushedEventData eventData = (ContainerRegistryImagePushedEventData) toSystemEventData(events[0]);
         assertEquals("127.0.0.1", eventData.getRequest().getAddr());
     }
 
@@ -373,8 +388,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ContainerRegistryImageDeletedEventData);
-        ContainerRegistryImageDeletedEventData eventData = (ContainerRegistryImageDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ContainerRegistryImageDeletedEventData);
+        ContainerRegistryImageDeletedEventData eventData = (ContainerRegistryImageDeletedEventData) toSystemEventData(events[0]);
         assertEquals("testactor", eventData.getActor().getName());
     }
 
@@ -386,8 +401,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ContainerRegistryChartDeletedEventData);
-        ContainerRegistryChartDeletedEventData eventData = (ContainerRegistryChartDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ContainerRegistryChartDeletedEventData);
+        ContainerRegistryChartDeletedEventData eventData = (ContainerRegistryChartDeletedEventData) toSystemEventData(events[0]);
         assertEquals("mediatype1", eventData.getTarget().getMediaType());
     }
 
@@ -399,8 +414,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ContainerRegistryChartPushedEventData);
-        ContainerRegistryChartPushedEventData eventData = (ContainerRegistryChartPushedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ContainerRegistryChartPushedEventData);
+        ContainerRegistryChartPushedEventData eventData = (ContainerRegistryChartPushedEventData) toSystemEventData(events[0]);
         assertEquals("mediatype1", eventData.getTarget().getMediaType());
     }
 
@@ -413,8 +428,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof IotHubDeviceCreatedEventData);
-        IotHubDeviceCreatedEventData eventData = (IotHubDeviceCreatedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof IotHubDeviceCreatedEventData);
+        IotHubDeviceCreatedEventData eventData = (IotHubDeviceCreatedEventData) toSystemEventData(events[0]);
         assertEquals("enabled", eventData.getTwin().getStatus());
     }
 
@@ -426,8 +441,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof IotHubDeviceDeletedEventData);
-        IotHubDeviceDeletedEventData eventData = (IotHubDeviceDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof IotHubDeviceDeletedEventData);
+        IotHubDeviceDeletedEventData eventData = (IotHubDeviceDeletedEventData) toSystemEventData(events[0]);
         assertEquals("AAAAAAAAAAE=", eventData.getTwin().getEtag());
     }
 
@@ -439,8 +454,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof IotHubDeviceConnectedEventData);
-        IotHubDeviceConnectedEventData eventData = (IotHubDeviceConnectedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof IotHubDeviceConnectedEventData);
+        IotHubDeviceConnectedEventData eventData = (IotHubDeviceConnectedEventData) toSystemEventData(events[0]);
         assertEquals("EGTESTHUB1", eventData.getHubName());
     }
 
@@ -452,8 +467,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof IotHubDeviceDisconnectedEventData);
-        IotHubDeviceDisconnectedEventData eventData = (IotHubDeviceDisconnectedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof IotHubDeviceDisconnectedEventData);
+        IotHubDeviceDisconnectedEventData eventData = (IotHubDeviceDisconnectedEventData) toSystemEventData(events[0]);
         assertEquals("000000000000000001D4132452F67CE200000002000000000000000000000002", eventData.getDeviceConnectionStateEventInfo().getSequenceNumber());
     }
 
@@ -465,8 +480,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof IotHubDeviceTelemetryEventData);
-        IotHubDeviceTelemetryEventData eventData = (IotHubDeviceTelemetryEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof IotHubDeviceTelemetryEventData);
+        IotHubDeviceTelemetryEventData eventData = (IotHubDeviceTelemetryEventData) toSystemEventData(events[0]);
         assertEquals("Active", eventData.getProperties().get("Status"));
     }
 
@@ -479,8 +494,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof SubscriptionValidationEventData);
-        SubscriptionValidationEventData eventData = (SubscriptionValidationEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof SubscriptionValidationEventData);
+        SubscriptionValidationEventData eventData = (SubscriptionValidationEventData) toSystemEventData(events[0]);
         assertEquals("512d38b6-c7b8-40c8-89fe-f46f9e9622b6", eventData.getValidationCode());
     }
 
@@ -492,8 +507,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof SubscriptionDeletedEventData);
-        SubscriptionDeletedEventData eventData = (SubscriptionDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof SubscriptionDeletedEventData);
+        SubscriptionDeletedEventData eventData = (SubscriptionDeletedEventData) toSystemEventData(events[0]);
         assertEquals("/subscriptions/id/resourceGroups/rg/providers/Microsoft.EventGrid/topics/topic1/providers/Microsoft.EventGrid/eventSubscriptions/eventsubscription1", eventData.getEventSubscriptionId());
     }
 
@@ -506,8 +521,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof EventHubCaptureFileCreatedEventData);
-        EventHubCaptureFileCreatedEventData eventData = (EventHubCaptureFileCreatedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof EventHubCaptureFileCreatedEventData);
+        EventHubCaptureFileCreatedEventData eventData = (EventHubCaptureFileCreatedEventData) toSystemEventData(events[0]);
         assertEquals("AzureBlockBlob", eventData.getFileType());
     }
 
@@ -520,8 +535,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MapsGeofenceEnteredEventData);
-        MapsGeofenceEnteredEventData eventData = (MapsGeofenceEnteredEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MapsGeofenceEnteredEventData);
+        MapsGeofenceEnteredEventData eventData = (MapsGeofenceEnteredEventData) toSystemEventData(events[0]);
         assertEquals(true, eventData.isEventPublished());
     }
 
@@ -533,8 +548,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MapsGeofenceExitedEventData);
-        MapsGeofenceExitedEventData eventData = (MapsGeofenceExitedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MapsGeofenceExitedEventData);
+        MapsGeofenceExitedEventData eventData = (MapsGeofenceExitedEventData) toSystemEventData(events[0]);
         assertEquals(true, eventData.isEventPublished());
     }
 
@@ -546,8 +561,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MapsGeofenceResultEventData);
-        MapsGeofenceResultEventData eventData = (MapsGeofenceResultEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MapsGeofenceResultEventData);
+        MapsGeofenceResultEventData eventData = (MapsGeofenceResultEventData) toSystemEventData(events[0]);
         assertEquals(true, eventData.isEventPublished());
     }
 
@@ -560,8 +575,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobCanceledEventData);
-        MediaJobCanceledEventData eventData = (MediaJobCanceledEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobCanceledEventData);
+        MediaJobCanceledEventData eventData = (MediaJobCanceledEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.CANCELING, eventData.getPreviousState());
         assertEquals(MediaJobState.CANCELED, eventData.getState());
         assertEquals(1, eventData.getOutputs().size());
@@ -583,8 +598,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobCancelingEventData);
-        MediaJobCancelingEventData eventData = (MediaJobCancelingEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobCancelingEventData);
+        MediaJobCancelingEventData eventData = (MediaJobCancelingEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.PROCESSING, eventData.getPreviousState());
         assertEquals(MediaJobState.CANCELING, eventData.getState());
     }
@@ -597,8 +612,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobProcessingEventData);
-        MediaJobProcessingEventData eventData = (MediaJobProcessingEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobProcessingEventData);
+        MediaJobProcessingEventData eventData = (MediaJobProcessingEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.SCHEDULED, eventData.getPreviousState());
         assertEquals(MediaJobState.PROCESSING, eventData.getState());
     }
@@ -610,8 +625,8 @@ public class DeserializationTests {
 
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobFinishedEventData);
-        MediaJobFinishedEventData eventData = (MediaJobFinishedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobFinishedEventData);
+        MediaJobFinishedEventData eventData = (MediaJobFinishedEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.PROCESSING, eventData.getPreviousState());
         assertEquals(MediaJobState.FINISHED, eventData.getState());
         assertEquals(1, eventData.getOutputs().size());
@@ -632,8 +647,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobErroredEventData);
-        MediaJobErroredEventData eventData = (MediaJobErroredEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobErroredEventData);
+        MediaJobErroredEventData eventData = (MediaJobErroredEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.PROCESSING, eventData.getPreviousState());
         assertEquals(MediaJobState.ERROR, eventData.getState());
         assertEquals(1, eventData.getOutputs().size());
@@ -653,8 +668,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputStateChangeEventData);
-        MediaJobOutputStateChangeEventData eventData = (MediaJobOutputStateChangeEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputStateChangeEventData);
+        MediaJobOutputStateChangeEventData eventData = (MediaJobOutputStateChangeEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.SCHEDULED, eventData.getPreviousState());
         assertEquals(MediaJobState.PROCESSING, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -670,8 +685,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobScheduledEventData);
-        MediaJobScheduledEventData eventData = (MediaJobScheduledEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobScheduledEventData);
+        MediaJobScheduledEventData eventData = (MediaJobScheduledEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.QUEUED, eventData.getPreviousState());
         assertEquals(MediaJobState.SCHEDULED, eventData.getState());
     }
@@ -684,8 +699,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputCanceledEventData);
-        MediaJobOutputCanceledEventData eventData = (MediaJobOutputCanceledEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputCanceledEventData);
+        MediaJobOutputCanceledEventData eventData = (MediaJobOutputCanceledEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.CANCELING, eventData.getPreviousState());
         assertEquals(MediaJobState.CANCELED, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -699,8 +714,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputCancelingEventData);
-        MediaJobOutputCancelingEventData eventData = (MediaJobOutputCancelingEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputCancelingEventData);
+        MediaJobOutputCancelingEventData eventData = (MediaJobOutputCancelingEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.PROCESSING, eventData.getPreviousState());
         assertEquals(MediaJobState.CANCELING, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -714,8 +729,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputErroredEventData);
-        MediaJobOutputErroredEventData eventData = (MediaJobOutputErroredEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputErroredEventData);
+        MediaJobOutputErroredEventData eventData = (MediaJobOutputErroredEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.PROCESSING, eventData.getPreviousState());
         assertEquals(MediaJobState.ERROR, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -732,8 +747,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputFinishedEventData);
-        MediaJobOutputFinishedEventData eventData = (MediaJobOutputFinishedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputFinishedEventData);
+        MediaJobOutputFinishedEventData eventData = (MediaJobOutputFinishedEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.PROCESSING, eventData.getPreviousState());
         assertEquals(MediaJobState.FINISHED, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -751,8 +766,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputProcessingEventData);
-        MediaJobOutputProcessingEventData eventData = (MediaJobOutputProcessingEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputProcessingEventData);
+        MediaJobOutputProcessingEventData eventData = (MediaJobOutputProcessingEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.SCHEDULED, eventData.getPreviousState());
         assertEquals(MediaJobState.PROCESSING, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -766,8 +781,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputScheduledEventData);
-        MediaJobOutputScheduledEventData eventData = (MediaJobOutputScheduledEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputScheduledEventData);
+        MediaJobOutputScheduledEventData eventData = (MediaJobOutputScheduledEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.QUEUED, eventData.getPreviousState());
         assertEquals(MediaJobState.SCHEDULED, eventData.getOutput().getState());
         assertTrue(eventData.getOutput() instanceof MediaJobOutputAsset);
@@ -781,8 +796,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobOutputProgressEventData);
-        MediaJobOutputProgressEventData eventData = (MediaJobOutputProgressEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobOutputProgressEventData);
+        MediaJobOutputProgressEventData eventData = (MediaJobOutputProgressEventData) toSystemEventData(events[0]);
         assertEquals("TestLabel", eventData.getLabel());
         assertTrue(eventData.getJobCorrelationData().containsKey("Field1"));
         assertEquals("test1", eventData.getJobCorrelationData().get("Field1"));
@@ -798,8 +813,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaJobStateChangeEventData);
-        MediaJobStateChangeEventData eventData = (MediaJobStateChangeEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaJobStateChangeEventData);
+        MediaJobStateChangeEventData eventData = (MediaJobStateChangeEventData) toSystemEventData(events[0]);
         assertEquals(MediaJobState.SCHEDULED, eventData.getPreviousState());
         assertEquals(MediaJobState.PROCESSING, eventData.getState());
     }
@@ -812,8 +827,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventEncoderConnectedEventData);
-        MediaLiveEventEncoderConnectedEventData eventData = (MediaLiveEventEncoderConnectedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventEncoderConnectedEventData);
+        MediaLiveEventEncoderConnectedEventData eventData = (MediaLiveEventEncoderConnectedEventData) toSystemEventData(events[0]);
         assertEquals("rtmp://liveevent-ec9d26a8.channel.media.azure.net:1935/live/cb5540b10a5646218c1328be95050c59", eventData.getIngestUrl());
         assertEquals("Mystream1", eventData.getStreamId());
         assertEquals("<ip address>", eventData.getEncoderIp());
@@ -828,8 +843,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventConnectionRejectedEventData);
-        MediaLiveEventConnectionRejectedEventData eventData = (MediaLiveEventConnectionRejectedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventConnectionRejectedEventData);
+        MediaLiveEventConnectionRejectedEventData eventData = (MediaLiveEventConnectionRejectedEventData) toSystemEventData(events[0]);
         assertEquals("Mystream1", eventData.getStreamId());
     }
 
@@ -841,8 +856,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventEncoderDisconnectedEventData);
-        MediaLiveEventEncoderDisconnectedEventData eventData = (MediaLiveEventEncoderDisconnectedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventEncoderDisconnectedEventData);
+        MediaLiveEventEncoderDisconnectedEventData eventData = (MediaLiveEventEncoderDisconnectedEventData) toSystemEventData(events[0]);
         assertEquals("rtmp://liveevent-ec9d26a8.channel.media.azure.net:1935/live/cb5540b10a5646218c1328be95050c59", eventData.getIngestUrl());
         assertEquals("Mystream1", eventData.getStreamId());
         assertEquals("<ip address>", eventData.getEncoderIp());
@@ -857,8 +872,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventIncomingStreamReceivedEventData);
-        MediaLiveEventIncomingStreamReceivedEventData eventData = (MediaLiveEventIncomingStreamReceivedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventIncomingStreamReceivedEventData);
+        MediaLiveEventIncomingStreamReceivedEventData eventData = (MediaLiveEventIncomingStreamReceivedEventData) toSystemEventData(events[0]);
         assertEquals("rtmp://liveevent-ec9d26a8.channel.media.azure.net:1935/live/cb5540b10a5646218c1328be95050c59", eventData.getIngestUrl());
         assertEquals("<ip address>", eventData.getEncoderIp());
         assertEquals("3557", eventData.getEncoderPort());
@@ -878,8 +893,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventIncomingStreamsOutOfSyncEventData);
-        MediaLiveEventIncomingStreamsOutOfSyncEventData eventData = (MediaLiveEventIncomingStreamsOutOfSyncEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventIncomingStreamsOutOfSyncEventData);
+        MediaLiveEventIncomingStreamsOutOfSyncEventData eventData = (MediaLiveEventIncomingStreamsOutOfSyncEventData) toSystemEventData(events[0]);
         assertEquals("10999", eventData.getMinLastTimestamp());
         assertEquals("video", eventData.getTypeOfStreamWithMinLastTimestamp());
         assertEquals("100999", eventData.getMaxLastTimestamp());
@@ -896,8 +911,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventIncomingVideoStreamsOutOfSyncEventData);
-        MediaLiveEventIncomingVideoStreamsOutOfSyncEventData eventData = (MediaLiveEventIncomingVideoStreamsOutOfSyncEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventIncomingVideoStreamsOutOfSyncEventData);
+        MediaLiveEventIncomingVideoStreamsOutOfSyncEventData eventData = (MediaLiveEventIncomingVideoStreamsOutOfSyncEventData) toSystemEventData(events[0]);
         assertEquals("10999", eventData.getFirstTimestamp());
         assertEquals("2000", eventData.getFirstDuration());
         assertEquals("100999", eventData.getSecondTimestamp());
@@ -913,8 +928,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventIncomingDataChunkDroppedEventData);
-        MediaLiveEventIncomingDataChunkDroppedEventData eventData = (MediaLiveEventIncomingDataChunkDroppedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventIncomingDataChunkDroppedEventData);
+        MediaLiveEventIncomingDataChunkDroppedEventData eventData = (MediaLiveEventIncomingDataChunkDroppedEventData) toSystemEventData(events[0]);
         assertEquals("8999", eventData.getTimestamp());
         assertEquals("video", eventData.getTrackType());
         assertEquals("video1", eventData.getTrackName());
@@ -930,8 +945,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventIngestHeartbeatEventData);
-        MediaLiveEventIngestHeartbeatEventData eventData = (MediaLiveEventIngestHeartbeatEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventIngestHeartbeatEventData);
+        MediaLiveEventIngestHeartbeatEventData eventData = (MediaLiveEventIngestHeartbeatEventData) toSystemEventData(events[0]);
         assertEquals("video", eventData.getTrackType());
         assertEquals("video", eventData.getTrackName());
         assertEquals("11999", eventData.getLastTimestamp());
@@ -949,8 +964,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof MediaLiveEventTrackDiscontinuityDetectedEventData);
-        MediaLiveEventTrackDiscontinuityDetectedEventData eventData = (MediaLiveEventTrackDiscontinuityDetectedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof MediaLiveEventTrackDiscontinuityDetectedEventData);
+        MediaLiveEventTrackDiscontinuityDetectedEventData eventData = (MediaLiveEventTrackDiscontinuityDetectedEventData) toSystemEventData(events[0]);
         assertEquals("video", eventData.getTrackType());
         assertEquals("video", eventData.getTrackName());
         assertEquals("10999", eventData.getPreviousTimestamp());
@@ -968,8 +983,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceWriteFailureData);
-        ResourceWriteFailureData eventData = (ResourceWriteFailureData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceWriteFailureData);
+        ResourceWriteFailureData eventData = (ResourceWriteFailureData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -981,8 +996,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceWriteCancelData);
-        ResourceWriteCancelData eventData = (ResourceWriteCancelData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceWriteCancelData);
+        ResourceWriteCancelData eventData = (ResourceWriteCancelData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -994,8 +1009,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceDeleteSuccessData);
-        ResourceDeleteSuccessData eventData = (ResourceDeleteSuccessData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceDeleteSuccessData);
+        ResourceDeleteSuccessData eventData = (ResourceDeleteSuccessData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1007,8 +1022,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceDeleteFailureData);
-        ResourceDeleteFailureData eventData = (ResourceDeleteFailureData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceDeleteFailureData);
+        ResourceDeleteFailureData eventData = (ResourceDeleteFailureData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1020,8 +1035,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceDeleteCancelData);
-        ResourceDeleteCancelData eventData = (ResourceDeleteCancelData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceDeleteCancelData);
+        ResourceDeleteCancelData eventData = (ResourceDeleteCancelData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1033,8 +1048,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceActionSuccessData);
-        ResourceActionSuccessData eventData = (ResourceActionSuccessData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceActionSuccessData);
+        ResourceActionSuccessData eventData = (ResourceActionSuccessData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1046,8 +1061,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceActionFailureData);
-        ResourceActionFailureData eventData = (ResourceActionFailureData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceActionFailureData);
+        ResourceActionFailureData eventData = (ResourceActionFailureData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1059,8 +1074,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceActionCancelData);
-        ResourceActionCancelData eventData = (ResourceActionCancelData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceActionCancelData);
+        ResourceActionCancelData eventData = (ResourceActionCancelData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1073,8 +1088,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ServiceBusActiveMessagesAvailableWithNoListenersEventData);
-        ServiceBusActiveMessagesAvailableWithNoListenersEventData eventData = (ServiceBusActiveMessagesAvailableWithNoListenersEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ServiceBusActiveMessagesAvailableWithNoListenersEventData);
+        ServiceBusActiveMessagesAvailableWithNoListenersEventData eventData = (ServiceBusActiveMessagesAvailableWithNoListenersEventData) toSystemEventData(events[0]);
         assertEquals("testns1", eventData.getNamespaceName());
     }
 
@@ -1086,8 +1101,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ServiceBusDeadletterMessagesAvailableWithNoListenersEventData);
-        ServiceBusDeadletterMessagesAvailableWithNoListenersEventData eventData = (ServiceBusDeadletterMessagesAvailableWithNoListenersEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ServiceBusDeadletterMessagesAvailableWithNoListenersEventData);
+        ServiceBusDeadletterMessagesAvailableWithNoListenersEventData eventData = (ServiceBusDeadletterMessagesAvailableWithNoListenersEventData) toSystemEventData(events[0]);
         assertEquals("testns1", eventData.getNamespaceName());
     }
 
@@ -1100,8 +1115,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof StorageBlobCreatedEventData);
-        StorageBlobCreatedEventData eventData = (StorageBlobCreatedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof StorageBlobCreatedEventData);
+        StorageBlobCreatedEventData eventData = (StorageBlobCreatedEventData) toSystemEventData(events[0]);
         assertEquals("https://myaccount.blob.core.windows.net/testcontainer/file1.txt", eventData.getUrl());
     }
 
@@ -1113,8 +1128,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof StorageBlobDeletedEventData);
-        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof StorageBlobDeletedEventData);
+        StorageBlobDeletedEventData eventData = (StorageBlobDeletedEventData) toSystemEventData(events[0]);
         assertEquals("https://example.blob.core.windows.net/testcontainer/testfile.txt", eventData.getUrl());
     }
 
@@ -1127,8 +1142,8 @@ public class DeserializationTests {
         EventGridEvent[] events = EventGridEvent.fromString(jsonData).toArray(new EventGridEvent[0]);
 
         assertNotNull(events);
-        assertTrue(events[0].asSystemEventData() instanceof ResourceWriteSuccessData);
-        ResourceWriteSuccessData eventData = (ResourceWriteSuccessData) events[0].asSystemEventData();
+        assertTrue(toSystemEventData(events[0]) instanceof ResourceWriteSuccessData);
+        ResourceWriteSuccessData eventData = (ResourceWriteSuccessData) toSystemEventData(events[0]);
         assertEquals("72f988bf-86f1-41af-91ab-2d7cd011db47", eventData.getTenantId());
     }
 
@@ -1136,7 +1151,8 @@ public class DeserializationTests {
 
     private String getTestPayloadFromFile(String fileName) throws IOException {
         ClassLoader classLoader = getClass().getClassLoader();
-        byte[] bytes = IOUtils.toByteArray(classLoader.getResourceAsStream("customization/" + fileName));
-        return new String(bytes);
+        try (InputStream inputStream = classLoader.getResourceAsStream("customization/" + fileName)) {
+            return new String(inputStream.readAllBytes());
+        }
     }
 }
